Changes Since beta 0.0.2
- Add option to select pins for movie sets

NOTE: DB Clean Required

v1.0.0
- Initial Version