@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.pinsentry" name="PinSentry" version="0.0.1" provider-name="robwebset">
+<addon id="script.pinsentry" name="PinSentry" version="0.0.3" provider-name="robwebset">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0"/>
 		<import addon="script.module.simplejson" version="3.3.0"/>
